--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,166 @@
-.App {
+/* BASIC */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: courier;
+  background: #fed80091;
+  user-select: none;
+}
+h1 {
+  margin: 0;
+  padding: 10px;
+}
+.input {
+  margin: 40px;
+}
+.bold {
+  font-weight: bolds;
+}
+/* SETTINGS */
+.settings {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 10px;
+  right: 10px;
+  background-color: magenta;
+  border: 5px solid black;
+  border-radius: 50px;
+  height: 50px;
+  width: 50px;
+  font-size: 25px;
+}
+.settings-panel {
+  position: fixed;
+  display: none;
+  justify-content: space-around;
+  align-items: start;
+  flex-direction: column;
+  top: 10px;
+  right: 10px;
+  background-color: magenta;
+  border: 5px solid black;
+  border-radius: 30px;
+  padding: 10px;
+  font-size: 15px;
+  z-index: 1;
+  animation: fadeInScaleUp 0.2s ease-out forwards;
+  /* width: 95vw;
+  box-sizing: border-box; */
+  /* height: 50vh; 
+  max-width: 300px;
+  max-height: 300px; */
+}
+.settings-panel-item {
+  margin: 5px;
+}
+.settings:hover + .settings-panel,
+.settings-panel:hover {
+  display: flex;
+}
+/* CARDS */
+.app {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 10px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fade {
+  opacity: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.minus,
+.plus {
+  width: 70px;
+  height: 70px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: black 5px solid;
+  border-radius: 60px;
+  font-size: 30px;
+  margin: 30px;
+  cursor: pointer;
+}
+.plus {
+  background-color: rgb(0, 140, 255);
+}
+.minus {
+  background-color: rgb(255, 0, 55);
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 250px;
+  height: 200px;
+  perspective: 1000px;
+  border-radius: 20px;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  box-sizing: border-box;
+  border: black 5px solid;
+  border-radius: 20px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.flip-card-front {
+  background-color: #fe218b;
+  color: black;
 }
 
-@keyframes App-logo-spin {
+.flip-card-back {
+  background-color: #25fe21;
+  color: black;
+  transform: rotateY(180deg);
+}
+/* RESPONSIVE */
+@media only screen and (max-width: 600px) {
+  .cards {
+    flex-direction: column;
+  }
+  .app {
+    height: 90vh;
+  }
+}
+
+@keyframes fadeInScaleUp {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    transform: scale(0.5) translate(40%, -40%);
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    transform: scale(1) translate(0, 0);
   }
 }
